Projeto - Range Hotels - Pt5 (InClass)

--- a/24_Projeto_Range_Hotels/css/style.css
+++ b/24_Projeto_Range_Hotels/css/style.css
@@ -145,7 +145,8 @@ h1,h2,h3,h4{
 
 @media screen and (min-width:74em){
     .heroBanner{
-        background-image: url(../images/bg_topo_1600x1374.jpg);
+        background-image: linear-gradient(transparent, var(--primary-color)), url(../images/bg_topo_1600x1374.jpg);
+        background-blend-mode: soft-light;
         background-position: center top;
         background-color: var(--primary-color);
         background-repeat: no-repeat;
@@ -158,5 +159,10 @@ h1,h2,h3,h4{
     .heroBanner_iconPlay{
         width: 7em;
         height: 7em;
+    }
+
+    .heroBanner_title,
+    .heroBanner_subtitle{
+        text-shadow: 4px 4px 2px rgb(0 0 0 / .8);
     }
 }
