Projeto - Range Hotels - MD Content - Pt7 (InClass)

--- a/24_Projeto_Range_Hotels/css/style.css
+++ b/24_Projeto_Range_Hotels/css/style.css
@@ -170,6 +170,32 @@ h1,h2,h3,h4{
     }
 }
 
+.middleContent{
+    background-color: #f6f6f6;
+    text-align: center;
+    padding: 2em;
+}
+
+.middleContent a{
+    color: inherit;
+    text-decoration: none;
+}
+
+.middleContent_title{
+    text-transform: uppercase;
+    color: var(--primary-color);
+    font-size: 1.25em;
+}
+
+.middleContent span[class^="icon-"]{
+    color: var(--primary-color);
+    font-size: 3.5em;
+}
+
+.middleContent p{
+    line-height: 1.5;
+
+}
 
 /* 
 min-width: 0        ->  col-sm
