--- a/24_Projeto_Range_Hotels/css/style.css
+++ b/24_Projeto_Range_Hotels/css/style.css
@@ -1,5 +1,6 @@
 :root{
     --primary-color: #612674;
+    --default-gap: 1rem;
 }
 
 html{
@@ -170,6 +171,7 @@ h1,h2,h3,h4{
     }
 }
 
+/* Middle Content */
 .middleContent{
     background-color: #f6f6f6;
     text-align: center;
@@ -194,8 +196,9 @@ h1,h2,h3,h4{
 
 .middleContent p{
     line-height: 1.5;
-
 }
+
+
 
 /* 
 min-width: 0        ->  col-sm
@@ -203,3 +206,35 @@ min-width: 48.75em  ->  col-md
 min-width: 56.25em  ->  col-lg
 min-width: 74em     ->  col-xl
 */
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--default-gap);
+}
+
+.col{
+    /* flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto; */
+    flex: 1 0 auto;
+    width: 100%;
+}
+
+.col-sm-12{
+    width: 100%;
+}
+
+/* col-md */
+@media screen and (min-width:48.75em){
+    .col-md-6{
+        width: calc(50% - var(--default-gap));
+    }
+}
+
+/* col-xl */
+@media screen and (min-width:74em){
+    .col-xl-3{
+        width: calc(25% - var(--default-gap));
+    }
+}
