Projeto - Range Hotels - Main Content - Pt10 - Tentativa Container

--- a/24_Projeto_Range_Hotels/css/style.css
+++ b/24_Projeto_Range_Hotels/css/style.css
@@ -276,3 +276,10 @@ min-width: 74em     ->  col-xl
     row-gap: 4em;
 }
 
+@media screen and (min-width:37.5em){
+    .mainContent_article{
+        display: flex;
+        flex-direction: row;
+        column-gap: 1em;
+    }
+}
