--- a/24_Projeto_Range_Hotels/css/style.css
+++ b/24_Projeto_Range_Hotels/css/style.css
@@ -276,10 +276,17 @@ min-width: 74em     ->  col-xl
     row-gap: 4em;
 }
 
-@media screen and (min-width:37.5em){
-    .mainContent_article{
+.mainContent_article {
+    container: main-content / inline-size;
+}
+
+@container main-content (min-width: 500px){
+    .mainContent_container{
         display: flex;
-        flex-direction: row;
-        column-gap: 1em;
+        gap: var(--default-gap);
+    }
+
+    .mainContent_title{
+        margin-top: 0;
     }
 }
