--- a/28_Projeto_dashboard/styles/styles.css
+++ b/28_Projeto_dashboard/styles/styles.css
@@ -1,3 +1,8 @@
+:root{
+    --primary-color: #004eda;
+    --grey: #F2F2F8;
+}
+
 /* RESET */
 *{
     margin: 0;
@@ -9,4 +14,34 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+
+
+    /* GRID */
+    display: grid;
+    grid-template-columns: 240px 1fr;
+    grid-template-rows: 64px auto;
+}
+
+img{
+    max-width: 100%;
+}
+
+
+.mainNav{
+    /* GRID */
+    grid-row: 1 / -1;
+    grid-column: 1 / 2;
+    background-color: rgba(255, 0, 0, 0.412);
+}
+
+.topNav{
+    grid-row: 1 / 2;
+    grid-column: 2 / -1;
+    background-color: rgba(0, 0, 255, 0.393);
+}
+
+main{
+    grid-row: 2 / -1;
+    grid-column: 2 / -1;
+    background-color: orange;
 }
