Projeto SerDigital - Parte 2

--- a/29_Projeto_SerDigital/styles/style.css
+++ b/29_Projeto_SerDigital/styles/style.css
@@ -152,3 +152,43 @@ img {
     margin-top: 6rem;
     margin-bottom: 6rem;
 }
+
+.row{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 3rem;
+}
+
+.row > .sm-12{
+    grid-column: 1 / 13;
+}
+
+
+/* 
+md - min-width: 46.25em
+lg - min-width: 90em 
+*/
+
+@media screen and (min-width: 46.25em){
+    .row > .md-3{
+        grid-column: span 3;
+    }
+
+    .row > .md-4{
+        grid-column: span 4;
+    }
+
+    .row > .md-9{
+        grid-column: span 9;
+    }
+}
+
+@media screen and (min-width: 90em){
+    .row > .lg-3{
+        grid-column: span 3;
+    }
+
+    .row > .lg-6{
+        grid-column: span 6;
+    }
+}
