Projeto SerDigital - Parte 4 - Media Queries - Fix SM

--- a/29_Projeto_SerDigital/styles/style.css
+++ b/29_Projeto_SerDigital/styles/style.css
@@ -14,9 +14,13 @@ body {
 }
 
 .content-wrapper-center {
-    padding: 1rem;
+    padding: 3rem 1rem 2rem;
     max-width: 67.25rem;
     margin: auto;
+}
+
+.hero_title{
+    margin-top: 0;
 }
 
 .header-menu {
@@ -161,6 +165,19 @@ img {
     gap: .5rem;
     grid-auto-flow: dense;
     /* A propriedade 'dense' faz com que preencha os espaços em branco */
+}
+
+.row.testemunhos_wrapper{
+    row-gap: 3rem;
+}
+
+.row.contato{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
+.contato_title{
+    margin-top: 0;
 }
 
 .row > .sm-12{
