--- a/30_Animação/style/style.css
+++ b/30_Animação/style/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "Montserrat", sans-serif;
     min-height: 100vh;
     margin: 0;
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
     background-image: radial-gradient(ellipse at 0 0 ,#fff8ce, #ffb61d);
 }
 
@@ -61,6 +61,10 @@ form input[type="text"]{
     background-color: transparent;
 }
 
+form input[type="text"]::placeholder{
+    color: #28293e;
+}
+
 form input[type="submit"]{
     background-color: #031d44;
     color: white;
@@ -71,5 +75,55 @@ section{
 }
 
 .animation{
+    position: relative;
+}
 
+.animation img{
+    position: absolute;
+}
+
+.animation img:nth-child(1){
+    left: 4px;
+    top: 150px;
+    animation: topleft 2s infinite alternate;
+}
+
+.animation img:nth-child(2){
+    right: 10px;
+    top: 20px;
+    animation: topleft 3s .5s infinite alternate;
+}
+
+.animation img:nth-child(3){
+    right: 0px;
+    top: 0px;
+    animation: topleft 3.5s .5s infinite alternate;
+}
+
+.animation img:nth-child(4){
+    left: 100px;
+    bottom: -100px;
+    animation: topleft 4s .5s infinite alternate;
+}
+
+.animation img:nth-child(5){
+    left: 100px;
+    top: -100px;
+    animation: topleft 3s infinite alternate;
+}
+
+.animation img:nth-child(6){
+    right: 100px;
+    bottom: -100px;
+    animation: topleft 4s infinite alternate;
+}
+
+@keyframes topleft{
+    from{
+        transform: translate(0, 0);
+    }
+
+    to{
+        transform: translate(-10px, -30px);
+    }
 }
