--- a/31_Transformacao_3D/Cubo_3D/style/style.css
+++ b/31_Transformacao_3D/Cubo_3D/style/style.css
@@ -1,9 +1,90 @@
+:root{
+    --x: 0deg;
+    --y: 0deg;
+    --z: 0deg;
+}
+/* Eixo X */
+:root:has([name="x"][value="0"]:checked){
+    --x:0deg;
+}
+:root:has([name="x"][value="15"]:checked){
+    --x:15deg;
+}
+:root:has([name="x"][value="45"]:checked){
+    --x:45deg;
+}
+:root:has([name="x"][value="90"]:checked){
+    --x:90deg;
+}
+:root:has([name="x"][value="135"]:checked){
+    --x:135deg;
+}
+:root:has([name="x"][value="180"]:checked){
+    --x:180deg;
+}
+:root:has([name="x"][value="270"]:checked){
+    --x:270deg;
+}
+
+/* Eixo Y */
+:root:has([name="y"][value="0"]:checked){
+    --y:0deg;
+}
+:root:has([name="y"][value="15"]:checked){
+    --y:15deg;
+}
+:root:has([name="y"][value="45"]:checked){
+    --y:45deg;
+}
+:root:has([name="y"][value="90"]:checked){
+    --y:90deg;
+}
+:root:has([name="y"][value="135"]:checked){
+    --y:135deg;
+}
+:root:has([name="y"][value="180"]:checked){
+    --y:180deg;
+}
+:root:has([name="y"][value="270"]:checked){
+    --y:270deg;
+}
+
+/* Eixo Z */
+:root:has([name="z"][value="0"]:checked){
+    --z:0deg;
+}
+:root:has([name="z"][value="15"]:checked){
+    --z:15deg;
+}
+:root:has([name="z"][value="45"]:checked){
+    --z:45deg;
+}
+:root:has([name="z"][value="90"]:checked){
+    --z:90deg;
+}
+:root:has([name="z"][value="135"]:checked){
+    --z:135deg;
+}
+:root:has([name="z"][value="180"]:checked){
+    --z:180deg;
+}
+:root:has([name="z"][value="270"]:checked){
+    --z:270deg;
+}
+
+
+
 body{
     font-family: sans-serif;
     min-height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    margin: 0;
+}
+
+.controls{
+
 }
 
 .cena{
@@ -18,6 +99,7 @@ body{
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
+    transition: transform .5s ease-in;
 }
 
 .face{
@@ -33,30 +115,30 @@ body{
     justify-content: center;
 }
 
-/* .cubo{
-    transform: rotateY(35deg) rotateX(35deg);
-} */
+.cubo{
+    transform: translateZ(-150px) rotateX(var(--x)) rotateY(var(--y)) rotateZ(var(--z));
+}
 
 .face-1{
-    transform: rotateY(0deg);
+    transform: translateZ(150px) rotateY(0deg);
 }
 
 .face-2{
-    transform: translateX(150px) translateZ(-150px) rotateY(90deg);
+    transform: translateX(150px) rotateY(90deg);
 }
 
 .face-3{
-    transform: translateX(-150px) translateZ(-150px) rotateY(90deg);
+    transform: translateX(-150px) rotateY(90deg);
 }
 
 .face-4{
-    transform: translateZ(-300px);
+    transform: translateZ(-150px);
 }
 
 .face-5{
-    transform: translateY(-150px) translateZ(-150px) rotateX(90deg);
+    transform: translateY(-150px) rotateX(90deg);
 }
 
 .face-6{
-    transform: translateY(150px) translateZ(-150px) rotateX(-90deg);
+    transform: translateY(150px) rotateX(-90deg);
 }
